@@ -25,8 +25,8 @@ $messages['en'] = array(
 	'configure-ext-settings'              => 'Settings',
 	'configure-ext-use-extension'         => 'Use this extension',
 	'configure-ext-use'                   => 'Use',
-	'configure-form-reason'		      => 'Reason for change:',
-	'configure-customised'		      => "''This setting has been customised''",
+	'configure-form-reason'               => 'Reason for change:',
+	'configure-customised'                => "''This setting has been customised''",
 
 	'configure-arrayinput-oneperline'     => "''(one per line)''",
 	'configure-summary'                   => 'This special page allows you to configure this wiki, see [http://www.mediawiki.org/wiki/Manual:Configuration_settings Configuration settings] for more information.',
@@ -46,10 +46,10 @@ Please make it writable by PHP to use this extension.',
 	'configure-js-get-image-url' 	      => 'Convert file name to URL',
 	'configure-js-image-error'            => 'An error occured while fetching the URL. Please check that the file exists.',
 	'configure-js-biglist-shown'	      => 'Setting details can be hidden',
-	'configure-js-biglist-hidden'	      => 'Setting details hidden',
-	'configure-js-biglist-show'	      => '[show details]',
-	'configure-js-biglist-hide'	      => '[hide details]',
-	'configure-js-summary-none'	      => 'No settings',
+	'configure-js-biglist-hidden'         => 'Setting details hidden',
+	'configure-js-biglist-show'           => '[show details]',
+	'configure-js-biglist-hide'           => '[hide details]',
+	'configure-js-summary-none'           => 'No settings',
 	'configure-js-search-legend'	      => 'Search settings',
 	'configure-js-search-prompt' 	      => 'Query: ',
 	'configure-no-diff'                   => 'There are no changes between selected versions.',
@@ -61,11 +61,11 @@ Please create it or change it to use this extension.',
 	'configure-old'                       => 'Old versions',
 	'configure-old-versions'              => 'List of old versions of the configuration:',
 	'configure-old-not-available'         => 'The old version of the settings you requested, $1, is not available',
-	'configure-old-changes'		      => 'changes',
-	'configure-old-summary'		      => '$1 by $2 $4 $3',
+	'configure-old-changes'               => 'changes',
+	'configure-old-summary'               => '$1 by $2 $4 $3',
 	'configure-saved'                     => 'The configuration has been saved',
 	'configure-backlink'                  => 'Return to form',
-	'configure-section-robots'	      => 'Web crawlers',
+	'configure-section-robots'            => 'Web crawlers',
 	'configure-section-features'	      => 'Features',
 	'configure-section-general'           => 'General settings',
 	'configure-section-paths'             => 'Paths',
@@ -125,15 +125,18 @@ Please create it or change it to use this extension.',
 	'configure-section-copyright'         => 'Copyright',
 	'configure-section-htcp'              => 'HTCP multicast',
 	'configure-section-misc'              => 'Miscellaneous',
-	'configure-section-filter' 	      => 'Filtering',
+	'configure-section-filter'            => 'Filtering',
 	'configure-section-mw-extensions'     => 'MediaWiki extensions',
 	'configure-section-external-tools'    => 'External tools',
 	'configure-section-filesystem'        => 'Filesystem and Shell interaction',
 	'configure-section-thumbnail'         => 'Image thumbnailing',
-	'configure-section-output'	      => 'Output',
+	'configure-section-output'            => 'Output',
 	'configure-select-wiki'               => 'Wiki selection',
 	'configure-select-wiki-available'     => 'Authorized values: $1',
 	'configure-select-wiki-desc'          => 'Select the wiki you want to configure.',
+	'configure-select-wiki-view-desc'     => 'Select a wiki for which you want to see the versions.',
+	'configure-select-wiki-view-all'      => 'All wikis',
+	'configure-select-wiki-view-specific' => 'Specific wiki:',
 	'configure-select-wiki-submit'        => 'Validate',
 	'configure-setting-not-available'     => 'This setting is not available in this version of MediaWiki',
 	'configure-transwiki-not-in-range'    => 'The requested wiki, $1, is not in allowed values ($2).',
@@ -141,7 +144,7 @@ Please create it or change it to use this extension.',
 	'configure-view-all-versions'         => 'Full list of versions',
 	'configure-view-default'              => 'Default settings',
 	'configure-view-not-allowed'          => 'You are not allowed to see this setting',
-	'configure-viewconfig-line'	      => '$1 $2 by $3 $5: $4',
+	'configure-viewconfig-line'           => '$1 $2 by $3 $5: $4',
 	'extensions'                          => 'Configure the extensions',
 	'right-configure'                     => 'Configure the wiki',
 	'right-configure-all'                 => 'Configure all wiki settings',
@@ -1113,6 +1116,9 @@ Veuillez le rendre modifiable par PHP pour que cette extension fonctionne.',
 	'configure-select-wiki-available' => 'Valeurs autorisées : $1',
 	'configure-select-wiki-desc' => 'Sélectionnez le wiki que vous voulez configurer.',
 	'configure-select-wiki-submit' => 'Valider',
+	'configure-select-wiki-view-desc' => 'Sélectionnez le wiki pour lequel vous voulez voir les versions.',
+	'configure-select-wiki-view-all' => 'Tous les wikis',
+	'configure-select-wiki-view-specific' => 'Un wiki spécifique :',
 	'configure-setting-not-available' => "Ce paramètre n'est pas disponible sur cette version de MediaWiki",
 	'configure-transwiki-not-in-range' => "Le wiki demandé, $1, n'est pas dans les valeurs autorisées ($2).",
 	'configure-view' => 'Voir',
